--- a/WebApiTest/WebApiTest/appsettings.json
+++ b/WebApiTest/WebApiTest/appsettings.json
@@ -10,9 +10,9 @@
     "DefaultConnection": "Server=localhost;DataBase=UserCompany;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Jwt": {
-    "Key": "This is my supper secret key for jwt",
-    "Issuer": "JWTAuthenticationServer",
-    "Audience": "JWTServicePostmanClient",
-    "Subject": "JWTServiceAccessToken"
+    "Key": "fvxcffdslg3482divdsjskgkl284543",
+    "Issuer": "UserIssuer",
+    "Audience": "UserAudience",
+    "LifeTimeMinutes": 1800
   }
 }
